--- a/docs/stylesheet.css
+++ b/docs/stylesheet.css
@@ -65,9 +65,6 @@ h2 {
 .infobox > ul {
   list-style-type: none;
 }
-h3 {
-  padding-top: 1em;
-}
 pre {
   background-color: #f7f7f9;
   padding: 1em;
@@ -93,4 +90,14 @@ form {
 .msg.invalid {
   border-color: #e44;
 	background: #fdd;
+}
+
+.CodeMirror {
+  border: 1px solid #ccc;
+}
+.CodeMirror.valid {
+  border: 1px solid #3c3;
+}
+.CodeMirror.invalid {
+  border: 1px solid #c33;
 }
