--- a/docs/stylesheet.css
+++ b/docs/stylesheet.css
@@ -5,6 +5,9 @@ a:link, a:visited {
 a:hover, a:active {
   text-decoration: underline;
 }
+p {
+  padding-bottom: 1em; 
+}
 footer {
   padding-top: 2em;
   color: #666;
